syntax = "proto3";
import "pkg/proto/common.proto";

package srs;

option go_package ="github.com/kioku-project/kioku/services/srs/proto;srs";

service Srs {
	rpc Push(SrsPushRequest) returns (common.Success) {}
	rpc Pull(common.DeckRequest) returns (common.Card) {}
	rpc AddUserCardBinding(BindingRequest) returns (common.Success) {}
	rpc GetDeckCardsDue(common.DeckRequest) returns (UserDueResponse) {}
	rpc GetUserCardsDue(common.User) returns (UserDueResponse) {}
}

message UserDueResponse {
	int64 dueCards = 1;
	int64 dueDecks = 2;
}

message SrsPushRequest {
	string userID = 1;
	string cardID = 2;
	string deckID = 3;
	int64 rating = 4;
}
message BindingRequest {
	string userID = 1;
	string cardID = 2;
	string deckID = 3;
}